Adapt to Sampo-UI 2.0.0
