# src/server/index.js
@@ -1,4 +1,4 @@
-import { backendSearchConfig } from './sparql/sampo/BackendSearchConfig'
+import { backendSearchConfig } from './sparql/as/BackendSearchConfig'
 import fs from 'fs'
 import express from 'express'
 import path from 'path'
@@ -135,6 +135,22 @@ new OpenApiValidator({
           uri: params.uri,
           facetClass: body.facetClass,
           constraints: body.constraints,
+          resultFormat: 'json'
+        })
+        res.json(data)
+      } catch (error) {
+        next(error)
+      }
+    })
+
+    app.get(`${apiPath}/:resultClass/network/:id`, async (req, res, next) => {
+      const { params } = req
+      try {
+        const data = await getByURI({
+          backendSearchConfig,
+          resultClass: params.resultClass,
+          uri: params.id,
+          constraints: null,
           resultFormat: 'json'
         })
         res.json(data)
